alwasy show side toolbar

--- a/index.html
+++ b/index.html
@@ -15,20 +15,14 @@
       <button id="bold-button"><i class="fas fa-bold"></i></button>
       <button id="italic-button"><i class="fas fa-italic"></i></button>
       <button id="link-button"><i class="fas fa-link"></i></button>
-      <button id="blockquote-button"><i class="fas fa-quote-right"></i></button>
-      <button id="header-1-button"><i class="fas fa-heading"><sub>1</sub></i></button>
-      <button id="header-2-button"><i class="fas fa-heading"><sub>2</sub></i></button>
+      <button id="header-1-button"><i class="fas fa-heading"></i></button>
+      <button id="header-2-button"><i class="fas fa-heading fa-xs"></i></button>
+      <button id="blockquote-button"><i class="fas fa-quote-left"></i></button>
     </div>
     <div id="sidebar-controls">
-        <button id="show-controls"><i class="fas fa-ellipsis-h"></i></button>
-      <button id="show-controls"><i class="fas fa-angle-left"></i>&nbsp;<i class="fas fa-angle-right"></i></button>
-      <button id="show-controls"><i class="fas fa-camera"></i></button>
-      <span class="controls">
-        <button id="image-button"><i class="fas fa-camera"></i></button>
-        <button id="video-button"><i class="fas fa-play"></i></button>
-        <button id="tweet-button"><i class="fab fa-twitter"></i></button>
-        <button id="divider-button"><i class="fas fa-minus"></i></button>
-      </span>
+      <button id="divider-button"><i class="fas fa-ellipsis-h"></i></button>
+      <button id="#"><i class="fas fa-angle-left"></i>&nbsp;<i class="fas fa-angle-right"></i></button>
+      <button id="image-button"><i class="fas fa-camera"></i></button>
     </div>
     <div id="editor-container"></div>
 
