--- a/index.html
+++ b/index.html
@@ -1,34 +1,88 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <title>Editor2</title>
-    <link href="/styles.css" rel="stylesheet">
-    <link href="/quill.core.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <title>Telegraph</title>
+    <link href="/css/quill.bubble.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
     <link href="/icons/css/fontawesome.min.css" rel="stylesheet">
     <link href="/icons/css/fa-solid.min.css" rel="stylesheet">
     <link href="/icons/css/fa-brands.min.css" rel="stylesheet">
   </head>
-
   <body>
-    <div id="tooltip-controls">
-      <button id="bold-button"><i class="fas fa-bold"></i></button>
-      <button id="italic-button"><i class="fas fa-italic"></i></button>
-      <button id="link-button"><i class="fas fa-link"></i></button>
-      <button id="header-1-button"><i class="fas fa-heading"></i></button>
-      <button id="header-2-button"><i class="fas fa-heading fa-xs"></i></button>
-      <button id="blockquote-button"><i class="fas fa-quote-left"></i></button>
-    </div>
     <div id="sidebar-controls">
       <button id="divider-button"><i class="fas fa-ellipsis-h"></i></button>
       <button id="#"><i class="fas fa-angle-left"></i>&nbsp;<i class="fas fa-angle-right"></i></button>
       <button id="image-button"><i class="fas fa-camera"></i></button>
     </div>
     <div id="editor-container"></div>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/quill.min.js"></script>
+    <script>
+      function isSelectionInsideElement(tagName) {
+        var sel, containerNode;
+        tagName = tagName.toUpperCase();
+        if (window.getSelection) {
+          sel = window.getSelection();
+          if (sel.rangeCount > 0) {
+            containerNode = sel.getRangeAt(0).commonAncestorContainer;
+          }
+        } else if ( (sel = document.selection) && sel.type != "Control" ) {
+          containerNode = sel.createRange().parentElement();
+        }
+        while (containerNode) {
+          if (containerNode.nodeType == 1 && containerNode.tagName == tagName) {
+            return true;
+          }
+          containerNode = containerNode.parentNode;
+        }
+        return false;
+      }
 
-    <script src="/jquery.min.js"></script>
-    <script src="/twitter.js"></script>
-    <script src="/quill.core.js"></script>
-    <script src="/script.js"></script>
+      let Block = Quill.import('blots/block');
+      let BlockEmbed = Quill.import('blots/block/embed');
+      let Keyboard = Quill.import('modules/keyboard');
+      let quill = new Quill('#editor-container', {
+        theme: 'bubble'
+      });
+
+      //quill.keyboard.addBinding({ key: 13  }, function(){
+      //  alert('ok')
+      //});
+
+      quill.addContainer($("#sidebar-controls").get(0));
+      quill.on(Quill.events.EDITOR_CHANGE, function(eventType, range) {
+        if (eventType !== Quill.events.SELECTION_CHANGE) return;
+        if (range == null) return;
+        if (range.length === 0) {
+          let [block, offset] = quill.scroll.descendant(Block, range.index);
+          if (block != null && block.domNode.firstChild instanceof HTMLBRElement) {
+            let lineBounds = quill.getBounds(range);
+            $('#sidebar-controls').show().css({
+              left: lineBounds.left - 120,
+              top: lineBounds.top - 2
+            });
+          } else {
+            $('#sidebar-controls').fadeOut();
+          }
+        } else {
+          $('#sidebar-controls').fadeOut();
+        }
+      });
+
+      class DividerBlot extends BlockEmbed { }
+      DividerBlot.blotName = 'divider';
+      DividerBlot.tagName = 'hr';
+
+      Quill.register(DividerBlot);
+
+      $('#divider-button').click(function() {
+        let range = quill.getSelection(true);
+        quill.insertEmbed(range.index, 'divider', true, Quill.sources.USER);
+        quill.setSelection(range.index + 1, Quill.sources.SILENT);
+        $('#sidebar-controls').fadeOut();
+      });
+
+    </script>
   </body>
 </html>
