improve sidebar-controls

--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
     <title>Telegraph</title>
     <link href="/css/quill.bubble.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
-    <link href="/icons/css/fontawesome.min.css" rel="stylesheet">
-    <link href="/icons/css/fa-solid.min.css" rel="stylesheet">
-    <link href="/icons/css/fa-brands.min.css" rel="stylesheet">
+    <link href="/icons/css/font-awesome.min.css" rel="stylesheet">
   </head>
   <body>
     <div id="sidebar-controls">
-      <button id="divider-button"><i class="fas fa-ellipsis-h"></i></button>
-      <button id="#"><i class="fas fa-angle-left"></i>&nbsp;<i class="fas fa-angle-right"></i></button>
-      <button id="image-button"><i class="fas fa-camera"></i></button>
+      <button id="divider-button">...</button>
+      <button id="#"><i class="fa fa-angle-left"></i>&nbsp;&nbsp;<i class="fa fa-angle-right"></i></button>
+      <button id="image-button"><i class="fa fa-camera"></i></button>
     </div>
     <div id="editor-container"></div>
     <script src="/js/jquery.min.js"></script>
