init clean theme

--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <title>Telegraph</title>
     <link href="/css/quill.bubble.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
+    <!-- <link href="/css/splendor.css" rel="stylesheet"> -->
     <link href="/icons/css/font-awesome.min.css" rel="stylesheet">
   </head>
   <body>
     <div id="sidebar-controls">
       <button id="divider-button">...</button>
       <button id="#"><i class="fa fa-angle-left"></i>&nbsp;&nbsp;<i class="fa fa-angle-right"></i></button>
-      <button id="image-button"><i class="fa fa-camera"></i></button>
+      <button id="image-button"><i class="fa fa-picture-o"></i></button>
     </div>
-    <div id="editor-container"></div>
+    <div id="editor-container" spellcheck="false"></div>
     <script src="/js/jquery.min.js"></script>
     <script src="/js/quill.min.js"></script>
     <script src="/js/script.js"></script>
