--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Telegraph</title>
     <link href="/css/quill.bubble.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
-    <!-- <link href="/css/splendor.css" rel="stylesheet"> -->
+    <link href="/css/wysiwyg.css" rel="stylesheet">
     <link href="/icons/css/font-awesome.min.css" rel="stylesheet">
   </head>
   <body>
@@ -14,7 +14,7 @@
       <button id="#"><i class="fa fa-angle-left"></i>&nbsp;&nbsp;<i class="fa fa-angle-right"></i></button>
       <button id="image-button"><i class="fa fa-picture-o"></i></button>
     </div>
-    <div id="editor-container" spellcheck="false"></div>
+    <div id="editor-container" class="wysiwyg"spellcheck="false"></div>
     <script src="/js/jquery.min.js"></script>
     <script src="/js/quill.min.js"></script>
     <script src="/js/script.js"></script>
