--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <button id="#"><i class="fa fa-angle-left"></i>&nbsp;&nbsp;<i class="fa fa-angle-right"></i></button>
       <button id="image-button"><i class="fa fa-picture-o"></i></button>
     </div>
-    <div id="editor-container" class="wysiwyg"spellcheck="false"></div>
+    <div id="editor-container" class="wysiwyg"></div>
     <script src="/js/jquery.min.js"></script>
     <script src="/js/quill.min.js"></script>
     <script src="/js/script.js"></script>
