--- a/ws.html
+++ b/ws.html
@@ -2,20 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Telegraph</title>
-    <link href="/css/quill.bubble.css" rel="stylesheet">
-    <link href="/css/style.css" rel="stylesheet">
-    <link href="/css/wysiwyg.css" rel="stylesheet">
-    <link href="/css/wysiwyg-custom.css" rel="stylesheet">
-    <link href="/icons/css/font-awesome.min.css" rel="stylesheet">
-  </head>
+    <title>ws</title>
+    <link href="/style.css" rel="stylesheet">
+    <link href="/wysiwyg.css" rel="stylesheet">
   <body>
-    <div id="sidebar-controls">
-      <button id="divider-button">...</button>
-      <button id="embed-button"><i class="fa fa-angle-left"></i>&nbsp;&nbsp;<i class="fa fa-angle-right"></i></button>
-      <button id="image-button"><i class="fa fa-picture-o"></i></button>
-    </div>
-    <div id="editor-container" class="wysiwyg">
+    <div class="wysiwyg" contenteditable="false">
       <h1>Toshi Omagari’s updated version opens up the typeface - version opens up the typeface</h1>
       <p>The decorative blackletter – <a href="#">which offers a stark contrast with</a> the other four typefaces included in the Wolpe Collection – drew on Berthold Wolpe’s time working in a metal foundry. As a result, it adopts the kinds of angular forms that would have been more easily chiselled into metal – appearing slightly less intricate than fellow blackletter faces.</p>
 
@@ -40,6 +31,9 @@
       </ol>
 
       <p>There were reportedly only two sets of matrices ever made of Sachsenwald, which otherwise has lived on only through original drawings held by the Monotype archive. As you’d expect, examples of it being used are limited, however it can be seen in a rare edition of the Rubaiyat of Omar Khayyam, published by Fanfare Press in the 1940s.</p>
+
+      <hr>
+
       <p>Toshi Omagari’s updated version opens up the typeface for experimentation by today’s designers, and also introduces elements that make it easier for today’s purposes – including a romanized version of the distinctive traditional German X originally used in Sachsenwald.</p>
 
       <h2>Get the Sachsenwald typeface</h2>
@@ -52,8 +46,5 @@
       <h5>Heading 5</h5>
       <h6>Heading 6</h6>
     </div>
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/quill.min.js"></script>
-    <script src="/js/script.js"></script>
   </body>
 </html>
