--- a/index.html
+++ b/index.html
@@ -15,43 +15,7 @@
       <button id="embed-button"><i class="fa fa-angle-left"></i>&nbsp;&nbsp;<i class="fa fa-angle-right"></i></button>
       <button id="image-button"><i class="fa fa-picture-o"></i></button>
     </div>
-    <div id="editor-container" class="wysiwyg">
-      <h1>Toshi Omagari’s updated version opens up the typeface - version opens up the typeface</h1>
-      <p>The decorative blackletter – <a href="#">which offers a stark contrast with</a> the other four typefaces included in the Wolpe Collection – drew on Berthold Wolpe’s time working in a metal foundry. As a result, it adopts the kinds of angular forms that would have been more easily chiselled into metal – appearing slightly less intricate than fellow blackletter faces.</p>
-
-      <blockquote>An early specimen sheet, published in 1938, said the typeface was intending to cause a stir among “horizon-scanning advertisers”, however the design quickly fell into obscurity, particularly as a result of blackletter’s connotations.</blockquote>
-
-      <h2>An early specimen sheet</h2>
-      <ul>
-        <li>List Pertama</li>
-        <li>List Kedua</li>
-        <li>List Ketiga</li>
-        <li>List Keempat</li>
-        <li>List Kelima</li>
-      </ul>
-
-      <h2>An early specimen sheet</h2>
-      <ol>
-        <li>List Pertama</li>
-        <li>List Kedua</li>
-        <li>List Ketiga</li>
-        <li>List Keempat</li>
-        <li>List Kelima</li>
-      </ol>
-
-      <p>There were reportedly only two sets of matrices ever made of Sachsenwald, which otherwise has lived on only through original drawings held by the Monotype archive. As you’d expect, examples of it being used are limited, however it can be seen in a rare edition of the Rubaiyat of Omar Khayyam, published by Fanfare Press in the 1940s.</p>
-      <p>Toshi Omagari’s updated version opens up the typeface for experimentation by today’s designers, and also introduces elements that make it easier for today’s purposes – including a romanized version of the distinctive traditional German X originally used in Sachsenwald.</p>
-
-      <h2>Get the Sachsenwald typeface</h2>
-      <p>View the web specimen for Sachsenwald and The Wolpe Collection. All five families are included in Monotype Library Subscription. Get unlimited access to over 10,000 fonts for $9.99/month. Try it now for free.</p>
-
-      <h1>Heading 1</h1>
-      <h2>Heading 2</h2>
-      <h3>Heading 3</h3>
-      <h4>Heading 4</h4>
-      <h5>Heading 5</h5>
-      <h6>Heading 6</h6>
-    </div>
+    <div id="editor-container" class="wysiwyg"></div>
     <script src="/js/jquery.min.js"></script>
     <script src="/js/quill.min.js"></script>
     <script src="/js/script.js"></script>
