--- a/ws.html
+++ b/ws.html
@@ -30,9 +30,16 @@
         <li>List Kelima</li>
       </ol>
 
-      <p>There were reportedly only two sets of matrices ever made of Sachsenwald, which otherwise has lived on only through original drawings held by the Monotype archive. As you’d expect, examples of it being used are limited, however it can be seen in a rare edition of the Rubaiyat of Omar Khayyam, published by Fanfare Press in the 1940s.</p>
-
+      <p>There were reportedly only two sets of matrices ever made of Sachsenwald, which otherwise has lived on only through original drawings held by the Monotype archive.</p>
       <hr>
+      <p>As you’d expect, examples of it being used are limited, however it can be seen in a rare edition of the Rubaiyat of Omar Khayyam, published by Fanfare Press in the 1940s.</p>
+
+      <figure>
+        <div class="object-wrapper">
+          <iframe src="https://www.youtube.com/embed/XlkV1Z8rTYc" frameborder="0" allowfullscreen="true"></iframe>
+        </div>
+        <figcaption></figcaption>
+      </figure>
 
       <p>Toshi Omagari’s updated version opens up the typeface for experimentation by today’s designers, and also introduces elements that make it easier for today’s purposes – including a romanized version of the distinctive traditional German X originally used in Sachsenwald.</p>
 
