--- a/ws.html
+++ b/ws.html
@@ -38,7 +38,7 @@
         <div class="object-wrapper">
           <iframe src="https://www.youtube.com/embed/XlkV1Z8rTYc" frameborder="0" allowfullscreen="true"></iframe>
         </div>
-        <figcaption></figcaption>
+        <figcaption data-placeholder="Judul (opsional)"></figcaption>
       </figure>
 
       <p>Toshi Omagari’s updated version opens up the typeface for experimentation by today’s designers, and also introduces elements that make it easier for today’s purposes – including a romanized version of the distinctive traditional German X originally used in Sachsenwald.</p>
