--- a/ws.html
+++ b/ws.html
@@ -36,7 +36,7 @@
 
       <figure>
         <div class="object-wrapper">
-          <iframe src="https://www.youtube.com/embed/XlkV1Z8rTYc" frameborder="0" allowfullscreen="true"></iframe>
+          <iframe src="https://www.youtube.com/embed/_Th1GTJmL2Y" frameborder="0" allowfullscreen="true"></iframe>
         </div>
         <figcaption data-placeholder="Judul (opsional)"></figcaption>
       </figure>
