--- a/view-mode/index.html
+++ b/view-mode/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>ws</title>
-    <link href="/style.css" rel="stylesheet">
-    <link href="/wysiwyg.css" rel="stylesheet">
+    <link href="/view-mode/style.css" rel="stylesheet">
+    <link href="/view-mode/wysiwyg.css" rel="stylesheet">
   <body>
     <div class="wysiwyg" contenteditable="false">
       <h1>Toshi Omagari’s updated version opens up the typeface - version opens up the typeface</h1>
