add figcaption on view mode

--- a/view-mode/index.html
+++ b/view-mode/index.html
@@ -38,7 +38,7 @@
         <div class="object-wrapper">
           <iframe src="https://www.youtube.com/embed/_Th1GTJmL2Y" frameborder="0" allowfullscreen="true"></iframe>
         </div>
-        <figcaption data-placeholder="Judul (opsional)"></figcaption>
+        <figcaption data-placeholder="Judul (opsional)">Judul Video</figcaption>
       </figure>
 
       <p>Toshi Omagari’s updated version opens up the typeface for experimentation by today’s designers, and also introduces elements that make it easier for today’s purposes – including a romanized version of the distinctive traditional German X originally used in Sachsenwald.</p>
