add iframe resizer dll

--- a/view-mode/index.html
+++ b/view-mode/index.html
@@ -6,6 +6,8 @@
     <link href="/view-mode/style.css" rel="stylesheet">
     <link href="/view-mode/wysiwyg.css" rel="stylesheet">
   <body>
+    <input type="file" id="file-input">
+    <div id="ok"></div>
     <div class="wysiwyg" contenteditable="false">
       <h1>Toshi Omagari’s updated version opens up the typeface - version opens up the typeface</h1>
       <p>The decorative blackletter – <a href="#">which offers a stark contrast with</a> the other four typefaces included in the Wolpe Collection – drew on Berthold Wolpe’s time working in a metal foundry. As a result, it adopts the kinds of angular forms that would have been more easily chiselled into metal – appearing slightly less intricate than fellow blackletter faces.</p>
@@ -34,12 +36,12 @@
       <hr>
       <p>As you’d expect, examples of it being used are limited, however it can be seen in a rare edition of the Rubaiyat of Omar Khayyam, published by Fanfare Press in the 1940s.</p>
 
-      <figure>
+      <!-- <figure>
         <div class="object-wrapper">
           <iframe src="https://www.youtube.com/embed/_Th1GTJmL2Y" frameborder="0" allowfullscreen="true"></iframe>
         </div>
         <figcaption data-placeholder="Judul (opsional)">Judul Video</figcaption>
-      </figure>
+      </figure> -->
 
       <p>Toshi Omagari’s updated version opens up the typeface for experimentation by today’s designers, and also introduces elements that make it easier for today’s purposes – including a romanized version of the distinctive traditional German X originally used in Sachsenwald.</p>
 
@@ -53,5 +55,18 @@
       <h5>Heading 5</h5>
       <h6>Heading 6</h6>
     </div>
+
+    <script src="/js/load-image.all.min.js"></script>
+    <script>
+      document.getElementById('file-input').onchange = function (e) {
+        loadImage(
+          e.target.files[0],
+          function (img) {
+            document.querySelector('#ok').appendChild(img);
+          },
+          {maxWidth: 600} // Options
+        );
+      };
+    </script>
   </body>
 </html>
